# animated_router

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
crates/route_transitions/src/: lib.rs
router_derive/: Cargo.toml
router_derive/src/: lib.rs
src/: main.rs  mod.rs  will_hide.rs
